--- a/sudoku.html
+++ b/sudoku.html
@@ -2,8 +2,132 @@
 	<head>
 	</head>
 	<style>
+	.box1 {
+		background-color:rgb(210, 154, 220);
+	}
+	.box2 {
+		background-color:rgb(100, 200, 130);
+	}
+	.table {
+		border-width: 1px;
+		border-color: black;
+		border-style: solid;
+		border-collapse: collapse;
+		display: table;
+	}
+	.row {
+		display: table-row;
+	}
+	.tile {
+		width: 40px;
+		height: 40px;
+		border-width: 1px;
+		border-color: black;
+		border-style: solid;
+		display: table-cell;
+	}
 	</style>
 	<body>
-
+		<div class="table">
+			<div class="row">
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+			</div>
+		<div class="row">
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+			</div>
+		<div class="row">
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+			</div>
+		<div class="row">
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+		</div>
+		<div class="row">
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+			</div>
+		<div class="row">
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+			</div>
+		<div class="row">
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+			</div>
+		<div class="row">
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+			</div>
+		<div class="row">
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box2"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+				<div class="tile box1"></div>
+			</div>
+		</div>
 	</body>
 </html>
